Fixed alignment

--- a/src/app/components/default/tower/tower.component.scss
+++ b/src/app/components/default/tower/tower.component.scss
@@ -54,7 +54,13 @@
         }
 
         &__tyre {
-            height: 25px;
+            flex: 0 0 25px;
+            display: flex;
+            align-items: center;
+
+            img {
+                width: 100%;
+            }
         }
 
         &__pit {
